<resources>
    <string name="app_name">Rapid Delivery</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">Please enter an username</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_switch_to_map">View on Map</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_homescreen">Rapid Delivery</string>

    <string name="font_libre_franklin_bold">fonts/libre_franklin_bold.ttf</string>
    <string name="font_libre_franklin_medium">fonts/libre_franklin_medium.ttf</string>
    <string name="font_libre_franklin_regular">fonts/libre_franklin_regular.ttf</string>

    <!-- Login -->
    <string name="hint_username">Enter username..</string>
    <string name="hint_password">Enter password..</string>

    <!-- Temp -->
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="title_activity_delivery_details">DeliveryDetailsActivity</string>
    <string name="title_activity_pick_up_details">PickUpDetailsActivity</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter search query…</string>
</resources>
