<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.rapiddelivery.src.TabActivity">
    <item
        android:id="@+id/action_switch_to_map"
        android:orderInCategory="100"
        android:title="@string/action_switch_to_map"
        android:icon="@drawable/ic_switch_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/filter"
        android:icon="@drawable/filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
